# wedding-photos

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.ddev/: config.python.yaml  config.yaml
.ddev/nginx_full/: nginx-site.conf
.ddev/web-build/: Dockerfile
app/: config.py  logger.py  main.py  web.py
app/locales/: en.json  es.json
app/middleware/: authentication.py
app/routes/: auth.py  files.py  gallery.py  upload.py
app/services/: i18n.py  rate_limit.py  security.py  storage.py  thumbnails.py
app/static/css/: styles.css
app/static/js/: lightbox.js  upload.js
app/templates/: base.html  error.html  gallery.html  gallery_all.html  index.html  login.html  person.html  upload_success.html
