[project]
name = "wedding-photos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "pillow>=12.3.0",
    "pillow-heif>=1.4.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "ruff>=0.15.20",
]
